--- a/data.yml
+++ b/data.yml
@@ -4,6 +4,15 @@ server:
 spring:
   application:
     name: data
+  datasource:
+    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2
 
 eureka:
   client:
