--- a/data.yml
+++ b/data.yml
@@ -12,7 +12,10 @@ spring:
   h2:
     console:
       enabled: true
-      path: /h2
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: false
 
 eureka:
   client:
