--- a/data.yml
+++ b/data.yml
@@ -1,14 +1,18 @@
 server:
   port: 8081
 
+
+
 spring:
   application:
     name: data
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
-    password:
+    password: password
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
