--- a/gateway.yml
+++ b/gateway.yml
@@ -1,25 +1,9 @@
 server:
-  port: 8081
-
-
+  port: 8082
 
 spring:
   application:
-    name: data
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: password
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        trace: false
-        web-allow-others: false
+    name: gateway
 
 eureka:
   client:
