--- a/gateway.yml
+++ b/gateway.yml
@@ -1,37 +1,49 @@
 server:
-  port: 8082
+  port: 8080
 
 spring:
   application:
     name: gateway
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: data-service
+          uri: lb://data
+          predicates:
+            - Path=/books/**
+          filters:
+            - RewritePath=/books/(?<path>.*), /$\{path}
 
 eureka:
   client:
     region: default
     registryFetchIntervalSeconds: 5
 
-zuul:
-  routes:
-    discovery:
-        path: /eureka/**
-        sensitive-headers: Set-Cookie,Authorization
-        url: http://localhost:8761
-    data:
-      path: /books/**
-      sensitive-headers: Set-Cookie,Authorization
+#zuul:
+#  routes:
+#    discovery:
+#        path: /eureka/**
+#        sensitive-headers: Set-Cookie,Authorization
+#        url: http://localhost:8761
+#    data:
+#      path: /books/**
+#      sensitive-headers: Set-Cookie,Authorization
 
-hystrix:
-  command:
-    data:
-      execution:
-        isolation:
-          thread.:
-            timeoutInMilliseconds: 600000
-    discovery:
-      execution:
-        isolation:
-          thread.:
-            timeoutInMilliseconds: 600000
+#hystrix:
+#  command:
+#    data:
+#      execution:
+#        isolation:
+#          thread.:
+#            timeoutInMilliseconds: 600000
+#    discovery:
+#      execution:
+#        isolation:
+#          thread.:
+#            timeoutInMilliseconds: 600000
 
 
 #    serviceUrl:
