--- a/gateway.yml
+++ b/gateway.yml
@@ -32,13 +32,14 @@ zuul:
 #      url: http://localhost:8761
   sensitive-headers: Cookie,Set-Cookie
 
-hystrix:
-  command:
-    data:
-      execution:
-        isolation:
-          thread.:
-            timeoutInMilliseconds: 600000
+#hystrix:
+#  command:
+#    data:
+#      execution:
+#        isolation:
+#          thread.:
+#            timeoutInMilliseconds: 600000
+
 #    discovery:
 #      execution:
 #        isolation:
