--- a/uigateway.yml
+++ b/uigateway.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8080
 
 spring:
   application:
@@ -22,30 +22,29 @@ eureka:
     region: default
     registryFetchIntervalSeconds: 5
 
-#zuul:
-#  routes:
-#    data:
-#      path: /books/**
-#      url: http://localhost:8081
-#      serviceId: books_service
-##    discovery:
-##      path: /eureka/**
-##      url: http://localhost:8761
-#  sensitive-headers: Cookie,Set-Cookie
+zuul:
+  routes:
+    data:
+      path: /books/**
+      url: http://localhost:8081
+      sensitive-headers: Cookie,Set-Cookie
+    discovery:
+      path: /eureka/**
+      url: http://localhost:8761
+      sensitive-headers: Cookie,Set-Cookie
 
-#hystrix:
-#  command:
-#    data:
-#      execution:
-#        isolation:
-#          thread.:
-#            timeoutInMilliseconds: 600000
-
-#    discovery:
-#      execution:
-#        isolation:
-#          thread.:
-#            timeoutInMilliseconds: 600000
+hystrix:
+  command:
+    data:
+      execution:
+        isolation:
+          thread.:
+            timeoutInMilliseconds: 600000
+    discovery:
+      execution:
+        isolation:
+          thread.:
+            timeoutInMilliseconds: 600000
 
 
 #    serviceUrl:
