--- a/data.yml
+++ b/data.yml
@@ -6,6 +6,10 @@ server:
 spring:
   application:
     name: data
+  cloud:
+    config:
+      uri: http://localhost:8888
+      failFast: true
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
