--- a/eureka.yml
+++ b/eureka.yml
@@ -12,7 +12,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
     registerWithEureka: false
     fetchRegistry: false
   instance:
