--- a/eureka.yml
+++ b/eureka.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: eureka
+    name: discovery
 #  cloud:
 #    config:
 #      name: eureka
@@ -10,10 +10,10 @@ server:
   port: 8761
 
 eureka:
+  instance:
+    hostname: localhost
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
     registerWithEureka: false
     fetchRegistry: false
-  instance:
-    hostname: localhost
